fix overlapping text in request form header

--- a/assets/stylesheets/responsive/custom.scss
+++ b/assets/stylesheets/responsive/custom.scss
@@ -1005,7 +1005,6 @@ h3.title {
   }
 
   span#to_public_body {
-    margin-bottom: 0;
     font-size: 1.1em;
   }
 
